--- a/requirements.txt
+++ b/requirements.txt
@@ -1,103 +1,4 @@
-Babel==0.9.6
-BeautifulSoup==3.2.1
-Django==1.5.1
-Flask==0.9
-Flask-Babel==0.8
-Flask-Login==0.1.3
-Flask-Mail==0.7.5
-Flask-OpenID==1.1.1
-Flask-SQLAlchemy==0.16
-Flask-WTF==0.8.2
-Flask-WhooshAlchemy==0.55a
-Fuzzy==1.0
-Jinja2==2.6
-Pygments==1.6rc1
-SQLAlchemy==0.7.2
-Tempita==0.5.1
-Twisted==13.2.0
-WTForms==1.0.3
-Werkzeug==0.8.3
-Whoosh==2.4.1
-WhooshAlchemy==0.1.4
-altgraph==0.10.2
-bdist-mpkg==0.5.0
-beautifulsoup4==4.1.3
-blinker==1.2
-bonjour-py==0.3
-coverage==3.6
-cssselect==0.7.1
-decorator==3.4.0
-django-browserid==0.9
-django-debug-toolbar==0.9.4
-django-social-auth==0.7.27
-django-tastypie==0.11.0
-fancy-tag==0.2.0
-guess-language==0.2
-gunicorn==0.17.2
-howdoi==0.2
-httpie==0.3.1
-httplib2==0.8
-lxml==3.1beta1
-macholib==1.5.1
-matplotlib==1.3.1
-modulegraph==0.10.4
-nose==1.2.1
-numpy==1.8.0rc1
-oauth2==1.5.211
-py2app==0.7.3
-pyOpenSSL==0.13.1
-pymongo==2.5.2
-pyobjc-core==2.5.1
-pyobjc-framework-Accounts==2.5.1
-pyobjc-framework-AddressBook==2.5.1
-pyobjc-framework-AppleScriptKit==2.5.1
-pyobjc-framework-AppleScriptObjC==2.5.1
-pyobjc-framework-Automator==2.5.1
-pyobjc-framework-CFNetwork==2.5.1
-pyobjc-framework-Cocoa==2.5.1
-pyobjc-framework-Collaboration==2.5.1
-pyobjc-framework-CoreData==2.5.1
-pyobjc-framework-CoreLocation==2.5.1
-pyobjc-framework-CoreText==2.5.1
-pyobjc-framework-DictionaryServices==2.5.1
-pyobjc-framework-EventKit==2.5.1
-pyobjc-framework-ExceptionHandling==2.5.1
-pyobjc-framework-FSEvents==2.5.1
-pyobjc-framework-InputMethodKit==2.5.1
-pyobjc-framework-InstallerPlugins==2.5.1
-pyobjc-framework-InstantMessage==2.5.1
-pyobjc-framework-LatentSemanticMapping==2.5.1
-pyobjc-framework-LaunchServices==2.5.1
-pyobjc-framework-Message==2.5.1
-pyobjc-framework-OpenDirectory==2.5.1
-pyobjc-framework-PreferencePanes==2.5.1
-pyobjc-framework-PubSub==2.5.1
-pyobjc-framework-QTKit==2.5.1
-pyobjc-framework-Quartz==2.5.1
-pyobjc-framework-ScreenSaver==2.5.1
-pyobjc-framework-ScriptingBridge==2.5.1
-pyobjc-framework-SearchKit==2.5.1
-pyobjc-framework-ServiceManagement==2.5.1
-pyobjc-framework-Social==2.5.1
-pyobjc-framework-SyncServices==2.5.1
-pyobjc-framework-SystemConfiguration==2.5.1
-pyobjc-framework-WebKit==2.5.1
-pyparsing==2.0.1
-pyquery==1.2.4
-python-dateutil==1.5
-python-mimeparse==0.1.4
-python-openid==2.2.5
-pytz==2013.7
-requests==0.14.2
-scipy==0.13.0b1
-six==1.4.1
-speaklater==1.3
-sqlalchemy-migrate==0.7.2
-stevedore==0.8
-virtualenv==1.11.6
-virtualenv-clone==0.2.4
-virtualenvwrapper==4.0
-wsgiref==0.1.2
-wtf==0.1
-xattr==0.6.4
-zope.interface==4.1.1
+Django==1.7.4
+pip==6.0.8
+selenium==2.44.0
+setuptools==3.6
